--- a/Graffiti/Base.lproj/LaunchScreen.storyboard
+++ b/Graffiti/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +20,30 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo_splash" translatesAutoresizingMaskIntoConstraints="NO" id="fGV-IU-Dkl">
+                                <rect key="frame" x="82.5" y="100" width="210" height="119"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="119" id="ehv-Ww-3Y5"/>
+                                    <constraint firstAttribute="width" constant="210" id="vUD-q4-t07"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_txt_splash" translatesAutoresizingMaskIntoConstraints="NO" id="Pzq-89-JcQ">
+                                <rect key="frame" x="30" y="461" width="201" height="176"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="201" id="utd-oh-fvU"/>
+                                    <constraint firstAttribute="height" constant="176" id="wV9-2Q-yTI"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.20392156862745098" green="0.59607843137254901" blue="0.85882352941176465" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="Pzq-89-JcQ" secondAttribute="bottom" constant="30" id="8qE-Fa-hzA"/>
+                            <constraint firstItem="fGV-IU-Dkl" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="80" id="AMe-WT-joo"/>
+                            <constraint firstItem="fGV-IU-Dkl" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Ftg-fU-Hk0"/>
+                            <constraint firstItem="Pzq-89-JcQ" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="30" id="O0O-pp-cuR"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,4 +51,8 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="img_logo_splash" width="210" height="119"/>
+        <image name="img_txt_splash" width="201" height="176"/>
+    </resources>
 </document>
