Basic implementation of persistence

--- a/Graffiti/Base.lproj/Main.storyboard
+++ b/Graffiti/Base.lproj/Main.storyboard
@@ -167,6 +167,9 @@
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" enabled="NO" systemItem="save" id="E3q-R8-Nne">
                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="saveGraffiti:" destination="C3a-BX-WB1" id="0RK-L5-as4"/>
+                            </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
